Lazy Load and Hide Unseen list items - lazy render items in the store view so they don't all call their images at once - when following, followers, and the store are scrolled, change the contents of list itmes that are no longer visible to display:none to reduce the load on the browser. - minor improvements to list code and CSS

--- a/css/obBase.css
+++ b/css/obBase.css
@@ -4185,7 +4185,7 @@ input[type="checkbox"].fieldItem:checked + label .togLabelOff {
   width: 32px;
   height: 32px;
   margin-right: 2px;
-  margin-top: 3px;
+  margin-top: 1px;
   margin-bottom: 5px;
   cursor: pointer;
   z-index: 5;
@@ -4804,6 +4804,23 @@ input[type="checkbox"].fieldItem:checked + label .togLabelOff {
 
 #ov1.chatOpen .backToTop {
   right: 303px;
+}
+
+.userShort {
+  border-bottom: solid 1px rgba(255,255,255,0.08);
+  box-sizing: border-box;
+}
+
+.userShort .userShortWrapper {
+  padding: 20px 15px;
+}
+
+.userList .userShort {
+  height: 116px; /* fix the height to prevent a reflow when the wrapper is hidden */
+}
+
+.userList .userShort.outOfScroll .userShortWrapper {
+  display: none;
 }
 
 /*========== utility classes ==========*/
